# System-BP

./: .dockerignore  .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.ci.yml  docker-compose.override.yml.example  docker-compose.yml  docker-stack.prod.yml  lint-staged.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/langgraph-service/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  dev.ps1  pyproject.toml  requirements.lock.txt
apps/langgraph-service/app/: __init__.py  config.py  graph.py  main.py
apps/langgraph-service/app/api/: __init__.py  graph_viz.py  health.py  internal_assistant.py  playground.py  process.py
apps/langgraph-service/app/db/: schema_llm_usage.sql
apps/langgraph-service/app/graphs/: __init__.py
apps/langgraph-service/app/llm/: __init__.py  anthropic.py  dlp.py  factory.py  gateway.py  openrouter.py  validators.py
apps/langgraph-service/app/nodes/: __init__.py  lawyer_handoff_node.py
apps/langgraph-service/app/prompts/: README.md  __init__.py  internal_assistant.md  loader.py  pre_attendance_agent.md  pre_attendance_classify.md  pre_attendance_qualify.md  simulation.md
apps/langgraph-service/app/schemas/: __init__.py  inbound.py  outbound.py  playground.py
apps/langgraph-service/docs/: dlp.md
apps/langgraph-service/tests/: __init__.py  conftest.py  test_config.py  test_internal_assistant.py  test_internal_client.py  test_lawyer_handoff.py  test_llm_gateway.py  test_pre_attendance_graph.py  test_prompt_injection.py  test_qualify_lead_tool.py
(+2025 files in other folders)
